# euler-copilot-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile-base  Dockerfile_fast_deploy  DokcerFile_fast_deploy  Jenkinsfile  README.en.md  README.md  dagster.yaml  dagster.yaml.example  db-anonymous  es-anonymous  install_titkon_packge.py  openapi.json  openapi.json.1  pyproject.toml  requirements.txt  run.sh  scrapy.cfg  start.sh  workspace.yaml
bge_finetune/: README.md  data_processing.py  eval.py
chat2DB/: app.py
chat2DB/base/: ac_automation.py  vectorize.py
chat2DB/config/: .env.example  config.py
chat2DB/docs/: change_txt_to_yaml.py  prompt.yaml
chat2DB/init_service/: init_vanna_db.py
chat2DB/llm/: chat_with_model.py
chat2DB/logger/: __init__.py
chat2DB/model/: request.py
chat2DB/service/: keyword_manager.py  sql_generate_manager.py
chat2db/: Dockerfile  nohup.out  requirements.txt  run.sh  start.sh
chat2db/app/: app.py
chat2db/common/: .env.example  init_sql_example.py  security.py  table_name.yaml  table_name_id.yaml  table_name_sql_exmple.yaml
chat2db/config/: .env.example  config.py  database.yaml
chat2db/database/: postgres.py
chat2db/docs/: change_txt_to_yaml.py  chat2db工具详细说明.md  prompt.yaml
chat2db/llm/: chat_with_model.py
chat2db/manager/: column_info_manager.py  database_info_manager.py  sql_example_manager.py  table_info_manager.py
chat2db/model/: request.py  response.py
chat2db/scripts/: run_chat2db.py
config/: .env.example  prompt_template.yaml
data_chain/apps/: app.py
data_chain/common/: .env.example  pp.py  prompt.yaml  stopwords.txt
data_chain/config/: config.py
data_chain/embedding/: embedding.py
data_chain/entities/: common.py  enum.py  request_data.py  response_data.py
data_chain/exceptions/: err_code.py  exception.py
data_chain/llm/: llm.py
data_chain/logger/: logger.py
data_chain/manager/: chunk_manager.py  dataset_manager.py  document_manager.py  document_type_manager.py  image_manager.py  knowledge_manager.py  model_manager.py  qa_manager.py  role_manager.py  session_manager.py  task_manager.py  task_queue_mamanger.py  task_report_manager.py  team_manager.py  testcase_manager.py  testing_manager.py  user_manager.py  vector_items_manager.py
data_chain/models/: api.py  constant.py  service.py
data_chain/parser/: parse_result.py
data_chain/rag/: base_searcher.py  doc2chunk_bfs_searcher.py  doc2chunk_searcher.py  dynamic_weighted_keyword_searcher.py  enhanced_by_llm_searcher.py  keyword_and_vector_searcher.py  keyword_searcher.py  query_extend_searcher.py  vector_searcher.py
deploy/: Dockerfile
deploy/k8s/: rag-deployment.yaml  rag-secret.yaml  rag-service.yaml
rag_service/: __init__.py  config.py  constants.py  database.py  env.py  env_config.py  exceptions.py
rag_service/classifier/: classifier.py  domain_classifier.py
rag_service/constant/: prompt_manageer.py
rag_service/dagster/: __init__.py
rag_service/document_loaders/: docx_loader.py  docx_section_loader.py  excel_loader.py  loader.py
rag_service/llms/: llm.py  qwen.py  spark.py  version_expert.py
rag_service/logger/: __init__.py
rag_service/models/: api.py  database.py  enums.py
rag_service/rag_app/: app.py  error_response.py  (+1 more)
scripts/: change_doucument_to_para.py  corpus_manager.py  delete_courpus.py  document_split.py  drop_all_table.py  init_all_table.py  init_asset.py  query_corpus.py  rag_kb_manager.py  stop_all_job.py  upload_courpus.py
test/: locust.py  requirements.txt  start_test.sh  test_qa.py
tests/: conftest.py  locustfile.py  test_proxy.py
utils/: README.md  main.py
(+213 files in other folders)
