[tool.poetry]
name = "rag-service"
version = "0.1.0"
description = "Service that vectorizes your document assets and provides RAG capability."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
aiofiles = "23.1.0"
concurrent-log-handler = "0.9.24"
fastapi = "0.104.1"
langchain = "0.0.351"
more-itertools = "10.1.0"
python = "^3.9.9"
sqlmodel = ">= 0.0.8, < 1.0.0"
starlette = "0.27.0"
uvicorn = "0.20.0"
elasticsearch = "8.11.0"
sseclient-py = "1.8.0"
sseclient = "0.0.27"
slowapi = "^0.1.8"
urllib3 = "1.26.18"
psycopg2-binary = "2.9.9"
itsdangerous = "2.1.2"
python-multipart = "0.0.6"
pydantic = "1.10.13"
python-dotenv = "1.0.0"
cryptography = "42.0.2"
jinja2 = "3.1.3"

[tool.poetry.extras]
pgsql = ["psycopg2"]

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.poetry.scripts]
rag_app = 'rag_service.rag_app.app:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"