[tool.poetry]
name = "rag-service"
version = "0.1.0"
description = "Service that vectorizes your document assets and provides RAG capability."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
aiofiles = "^23.2.1"
concurrent-log-handler = "^0.9.24"
dagster = "^1.4.12"
dagster-postgres = { version = ">= 0.20.12, < 1.0.0", optional = true }
dagster-webserver = "^1.4.12"
fastapi = ">= 0.97.0, < 1.0.0"
fastapi-pagination = ">= 0.12.9, < 1.0.0"
langchain = "0.0.323"
more-itertools = "^10.1.0"
python = "^3.9.9"
SQLAlchemy = "^2.0.23"
starlette = ">= 0.27.0, < 0.28.0"
uvicorn = ">= 0.22.0, < 1.0.0"
elasticsearch = "^8.10.0"
sseclient-py = "^1.8.0"
sseclient = "0.0.27"
slowapi = "^0.1.8"
urllib3 = "<2.0.0"
psycopg2-binary = "^2.9.9"
itsdangerous = "^2.1.2"
python-multipart = "^0.0.6"
pydantic = "<2.0.0"

[tool.poetry.extras]
pgsql = ["dagster-postgres", "psycopg2"]

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.poetry.scripts]
rag_app = 'rag_service.rag_app.app:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"